--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ nav {
     .github-icon {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: center;
         margin-top: 1rem;
         margin-right: 1rem;
         width: 2rem;
