--- a/style.css
+++ b/style.css
@@ -69,13 +69,13 @@ nav {
         height: 7.3rem;
     }
 
-    .bx-download, #github, .bxl-linkedin {
+    #github {
         padding: 0 0 0.4rem;
         font-size: 1.6rem;
     }
 }
 
-/*about me*/
+/*about me
 .about-me {
     display: flex;
     flex-direction: column;
@@ -97,6 +97,7 @@ nav {
 .about-me a {
     color: #212121;
 }
+*/
 
 @media screen and (max-width: 689px) {
     .about-me p, ul {
