--- a/style.css
+++ b/style.css
@@ -75,30 +75,6 @@ nav {
     }
 }
 
-/*about me
-.about-me {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-}
-
-.about-me p, ul {
-    width: 54vw;
-    color: #FFF;
-    font-size: 1rem;
-    margin-top: 1.8rem;
-    margin-bottom: 0;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 300;
-}
-
-.about-me a {
-    color: #212121;
-}
-*/
-
 @media screen and (max-width: 689px) {
     .about-me p, ul {
         width: 90vw;
@@ -135,6 +111,7 @@ nav {
     flex-direction: column;
     align-items: center;
     margin-bottom: 3rem;
+    margin-top 3rem;
 }
 
 .project {
