--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ nav {
     flex-direction: column;
     align-items: center;
     margin-bottom: 3rem;
-    margin-top 3rem;
+    margin-top: 3rem;
 }
 
 .project {
@@ -128,6 +128,7 @@ nav {
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
     text-align: center;
+    /*margin-top: 3rem;*/
 }
 
 .carousel {
