change project header colour

--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ nav {
     font-weight: 300;
     text-align: center;}
     align-items: center;
+    color: #000;
 }
 
 .bx-chevron-left, .bx-chevron-right {
