--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ nav {
     font-size: 1.6rem;
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
-    text-align: center;}
+    text-align: center;
     align-items: center;
     color: #000;
 }
