--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ a:visited {
 nav {
     display: flex;
     justify-content: space-between;
-    background-color: #000;
+    background-color: #2c2d2d;
 }
 
 .github-icon {
