--- a/style.css
+++ b/style.css
@@ -113,7 +113,6 @@ nav {
     flex-direction: column;
     align-items: center;
     margin-bottom: 3rem;
-    /*margin-top: 3rem;*/
 }
 
 .project {
@@ -138,7 +137,7 @@ nav {
 .bx-chevron-left, .bx-chevron-right {
     font-size: 3rem;
     cursor: pointer;
-    color: #000;
+    color: red;
 }
 
 .project-img {
